fix dark mode toggle size

--- a/style.css
+++ b/style.css
@@ -4278,7 +4278,7 @@ button:active::after {
 body.dark .chat-back-btn { background: #333; color: #fff; }
 /* From Uiverse.io by 00Kubi */ 
 .theme-switch {
-  --toggle-size: 30px;
+  --toggle-size: 15px;
   /* the size is adjusted using font-size,
      this is not transform scale,
      so you can choose any size */
